<resources>
    <string name="go_premium">Go Premium</string>
    <string name="edit_account">Edit Account</string>
    <string name="listings">My Listings</string>
    <string name="reutrn_str">Return to HomeFinderz</string>
    <string name="main_page">Your upgrade to premium has completed successfully!!!</string>
    <string name="app_name" translatable="false">HomeFinderz</string>
    <string name="enter_email" translatable="false">Your email address</string>
    <string name="enter_password" translatable="false">Your password</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="ok" translatable="false">OK</string>
    <string name="edit">Edit</string>

    <string name="my_profile">My Profile</string>
    <string name="saved_searches">Saved searches</string>
    <string name="min_sqm">Min sqm:</string>
    <string name="min_price">Min price:</string>
    <string name="max_sqm">Max sqm:</string>
    <string name="max_price">Max price:</string>
    <string name="floor">Floor:</string>
    <string name="heating">Heating</string>
    <string name="beds">Bedrooms:</string>
    <string name="baths">Bathrooms:</string>
    <string name="create_account">Create Account,</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
    <string name="publish_listing">Publish Listing</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="square_meters">Square Meters</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="floorhint">Floor</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="modify_your_account">Modify your account</string>
    <string name="save_changes">Save Changes</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="send_code">Send Code</string>
    <string name="validate_mail">Validate Mail</string>
    <string name="input_code">Input Code</string>
    <string name="modify_listing">Modify Listing</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="save_this_search">Save this search</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="no_account">No account?</string>
    <string name="skip">Skip</string>
    <string name="accept">Accept</string>
    <string name="textview">TextView</string>
    <string name="publish_new">Publish New</string>
    <string name="manage_published_listings">Manage Published Listings</string>
    <string name="your_saved_searches">Your Saved Searches</string>
    <string name="search_history">Search History</string>
    <string name="ssi_heating">Heating</string>
    <string name="ssi_noHeating">No Heating</string>
    <string name="ac_user_information">User Information</string>
    <string name="ac_users_email">email</string>
    <string name="ac_users_name">onoma</string>
    <string name="ac_users_lastname">epwnumo</string>
    <string name="person_icon">person_icon</string>
    <string name="email_icon">email_icon</string>
    <string name="sqm_hint">sqm</string>
    <string name="price_hint">price</string>
    <string name="beds_hint">beds</string>
    <string name="baths_hints">baths</string>
    <string name="floor_hint">floor</string>
    <string name="pl_listing_description">Listing Description</string>
    <string name="pl_txt_location">Location:</string>
    <string name="pl_txt_pricr">Price:</string>
    <string name="pl_txt_floor">Floor:</string>
    <string name="pl_txt_sqm">Sqm:</string>
    <string name="pl_txt_baths">Bathrooms:</string>
    <string name="pl_txt_bedrooms">Bedrooms:</string>
    <string name="ac_bt_my_accepted_listings">My accepted listings</string>
    <string name="accepted_listings">Accepted Listings</string>
    <string name="view_more">View More</string>
    <string name="tv_vlid">ID:</string>
    <string name="listing_details">Listing Details</string>
    <string-array name="locations">
        <item>Αθήνα</item>
        <item>Κέντρο Αθήνας</item>
        <item>Πειραιάς</item>
        <item>Βόρεια Προάστια</item>
        <item>Νότια Προάστια</item>
        <item>Δυτικά Προάστια</item>
        <item>Ανατολικά Προάστια</item>
    </string-array>
</resources>
