<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.publishListing.PublishListingActivity">

    <ScrollView
        android:id="@+id/scrollPublishListing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">


            <TextView
                android:id="@+id/plTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/publish_listing"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <View
                android:id="@+id/pl_orange_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="100dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plTitle">

                <TextView
                    android:id="@+id/pl_txt_price"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/pl_txt_pricr"
                    android:textSize="20sp"
                    tools:textStyle="bold" />

                <EditText
                    android:id="@+id/et_plPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/price"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <TextView
                    android:id="@+id/pl_txt_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/pl_txt_location"
                    android:textSize="20sp"
                    tools:textStyle="bold" />

                <EditText
                    android:id="@+id/et_plLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/location"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

                <TextView
                    android:id="@+id/pl_txt_floor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/pl_txt_floor"
                    android:textSize="20sp"
                    tools:textStyle="bold" />

                <EditText
                    android:id="@+id/et_plFloor"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/floorhint"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/pl_txt_sqm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/pl_txt_sqm"
                    android:textSize="20sp"
                    tools:textStyle="bold" />

                <EditText
                    android:id="@+id/et_plSQM"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/square_meters"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

                <TextView
                    android:id="@+id/pl_txt_baths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/pl_txt_baths"
                    android:textSize="20sp"
                    tools:textStyle="bold" />

                <EditText
                    android:id="@+id/et_plBathrooms"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/baths_hints"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/pl_txt_beds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/pl_txt_bedrooms"
                    android:textSize="20sp"
                    tools:textStyle="bold" />

                <EditText
                    android:id="@+id/et_plBedrooms"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/beds_hint"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox_plHeating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/heating"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/lis_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:text="@string/pl_listing_description"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_plHeating" />

            <EditText
                android:id="@+id/et_plDescription"
                android:layout_width="384dp"
                android:layout_height="85dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lis_description" />

            <View
                android:id="@+id/pl_orange_line_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_plDescription" />

            <Button
                android:id="@+id/btn_plConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="22dp"
                android:text="@string/confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pl_orange_line_2" />

            <Button
                android:id="@+id/btn_plCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="130dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_plConfirm"
                app:layout_constraintTop_toBottomOf="@+id/pl_orange_line_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>